--- a/Report.tex
+++ b/Report.tex
@@ -314,6 +314,14 @@ The results are written in Table 1 and shown in Figure 2.(c). The interpretation
     \caption{Coefficients of our linear regression}
 \end{table}
 
+\item 4c
+
+\item To find the expected fuel consumption of Koenigsegg One :1, we need to remember that :
+
+$$\mathbb{E}(\ln(Y)) = \mathbb{E}(W) = \beta_1 \cdot X + \beta_0$$
+
+When we insert the values of X (=1000 ), $\beta_1$ (=0.0041 ) and $\beta_0$ (=-1.6117), we find that the expected fuel consumption of Koenigsegg One :1 is 12,5209 [l/100km].
+
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
