--- a/Report.tex
+++ b/Report.tex
@@ -357,6 +357,19 @@ $$P\left (1.7767 < W^* < 3.2781 \right ) = 0.95$$
 
 In terms of Y, the interval $Y \in \left [ 5.91;26.5 \right ]$ will contain the predicted value of $Y^*$ with $95\%$ probability. This result is astonishing since even if $0.95$ is large, we could think that the good alignment of the points on FIGURE 2(c) would lead to a good confidence in our prediction. This surprising length  of interval is due to the standard deviation factor S disturbed by the scattering of the first points.
 
+\item The dependence relationship between the average fuel consumption and the car type can be expressed by the correlation coefficient $\rho$. \footnote{As asked in the instructions, we will work with the variable W which is directly related to Y.} The following r is the maximum-likelihood estimator of $\rho$ that we calculate from our dataset.
+
+$$\rho = \frac{Cov(W,Z)}{\sqrt{Var(W)\cdot Var(Z)}} \qquad r = \frac{\sum_{i=1}^n (W_i-\bar{W})(Z_i-\bar{Z})}{\sum_{i=1}^n(W_i-\bar{W})^2\sum_{i=1}^n(Z_i-\bar{Z})^2} = 0.8615$$
+
+If we wish to test the hypothesis that there is no correlation between W and Z, we must test $H_0$: $\rho = 0$ against $H_a$: $\rho \neq 0$. Let's use the following test statistic that follows a student t distribution with n-2 degrees of freedom. 
+
+$$t = \frac{r\sqrt{n-2}}{\sqrt{1-r^2}}$$
+
+In our case, we want to use a two-tailed test : as $\alpha = 0.05$, the rejection region is $|t|>t_{\alpha/2} = 1.9845$. The observed value $t=16.7955$ is far bigger than $t_{0.025}$ and therefore we reject $H_0$. 
+
+Rather than showing any independence, it even seems that there is a correlation between W and Z as $\rho$ is closer to the unity than it is to zero. This can be illustrated when comparing the average fuel consumption for each type of car. If there was no correlation, these averages should have rather similar values for a sufficiently big dataset. However, when looking at the following values:
+
+$$\bar{W}_{z=1} = -0.5959 \qquad \bar{W}_{z=2} = 0.2811 \qquad \bar{W}_{z=3} = 1.6099$$
 
 \end{enumerate}
 
