--- a/Report.tex
+++ b/Report.tex
@@ -211,7 +211,7 @@ These values are very close to the ones calculated previously.
 \begin{figure}
     \centering
   \includegraphics[width = 10cm]{values.png}
-  \caption{Convergence of statistics for an increasing sample size}
+  \caption{Results of the calculations in (f) for n=40,60,80,...,10000.}
 \end{figure}
 
 \end{enumerate}
