--- a/Report.tex
+++ b/Report.tex
@@ -345,7 +345,7 @@ We can conclude from the figure 4 that more we have observations (so n increases
   \caption{Histograms of the three samples}
 \end{figure}
 
-We can see that when n increases the data are more confined around the median, so the estimator becomes better.
+We can see that when n increases the data are more confined around the median, so the estimator becomes better. Moreover, the median is approximately 0 which means that the estimator $\hat{q}_L$ is very closed to exact value of $\hat{q}_s$.
 
 
 \end{enumerate}
