--- a/Report.tex
+++ b/Report.tex
@@ -210,7 +210,7 @@ These values are very close to the ones calculated previously.
 
 \begin{figure}
     \centering
-  \includegraphics[width = 10cm]{values.png}
+  \includegraphics[width = 10cm]{img/values.png}
   \caption{Results of the calculations in (f) for n=40,60,80,...,10000.}
 \end{figure}
 
@@ -294,7 +294,7 @@ $$ \hat{q}_L = (1-0.05^{\frac{1}{\hat{\beta}_L}})^{\frac{1}{\hat{\alpha}_L}}$$
 
 \begin{figure}[!h]
     \centering
-  \includegraphics[width = 10cm]{boxplot.png}
+  \includegraphics[width = 10cm]{img/boxplot.png}
   \caption{Boxplot of these three samples}
 \end{figure}
 
@@ -302,7 +302,7 @@ As we can see from the figure 2, the data  from the three estimators are very si
 
 \begin{figure}[!h]
     \centering
-  \includegraphics[width = 10cm]{hist3b.png}
+  \includegraphics[width = 10cm]{img/hist3b.png}
   \caption{Histogram of these three samples}
 \end{figure}
 
@@ -330,7 +330,7 @@ The most efficient estimator should be unbiased with smallest variance. So the e
 
 \begin{figure}[!h]
     \centering
-  \includegraphics[width = 14cm]{3d.png}
+  \includegraphics[width = 14cm]{img/3d.png}
   \caption{Plots of the bias, variance, and mean squared error of each estimator.}
 \end{figure}
 
@@ -341,7 +341,7 @@ We can conclude from the figure 4 that more we have observations (so n increases
 
 \begin{figure}[!h]
     \centering
-  \includegraphics[width = 10cm]{3e.png}
+  \includegraphics[width = 10cm]{img/3e.png}
   \caption{Histograms of the three samples}
 \end{figure}
 
@@ -364,7 +364,7 @@ We can see that when n increases the data are more confined around the median, s
 
 \begin{figure}
     \centering
-    \includegraphics[width = 15cm]{dataset.eps}
+    \includegraphics[width = 15cm]{img/dataset.eps}
     \caption{Behaviours between the variables}
 \end{figure}
 
