Ajout des codes partie 3 et 4

--- a/Report.tex
+++ b/Report.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper]{article}
 
+\usepackage{minted}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}      
 \usepackage[english]{babel}
@@ -471,6 +472,11 @@ $\mathbf{Independence}$ : Our 100 observations are not related to each other mea
 \newpage
 
 \appendix
+\section*{APPENDIX : MatLab Code}
 
-\section{MatLab Code}
+\subsection*{Part 3}
+\inputminted{matlab}{Proba3_complet.m}
+
+\subsection*{Part 4}
+\inputminted{matlab}{part4.m}
 \end{document}
