--- a/Report.tex
+++ b/Report.tex
@@ -429,7 +429,7 @@ By isolating $W^*$, we obtain :
 
 $$P\left ( \hat{W^*}-t_{\alpha/2}S\sqrt{1+\frac{1}{n}+\frac{(x^*-\bar{x})^2}{S_{xx}}} < W^* < \hat{W^*}+t_{\alpha/2}S\sqrt{1+\frac{1}{n}+\frac{(x^*-\bar{x})^2}{S_{xx}}} \right ) = 1-\alpha$$
 
-Using values from our dataset and $1-\alpha = 0.95$, we get:
+Using values from our dataset and $t_{\alpha/2} = 1.9845$, we get:
 
 $$P\left (1.7767 < W^* < 3.2781 \right ) = 0.95$$
 
