Ajout code Part 1

--- a/Report.tex
+++ b/Report.tex
@@ -474,6 +474,9 @@ $\mathbf{Independence}$ : Our 100 observations are not related to each other mea
 \appendix
 \section*{APPENDIX : MatLab Code}
 
+\subsection*{Part 1}
+\inputminted{matlab}{PROBA1g.m}
+
 \subsection*{Part 3}
 \inputminted{matlab}{Proba3_complet.m}
 
